fixed scrollbar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ body {
   font-size: 20px;
   font-weight: 300;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-y: hidden; }
   body.tully, [data-house="tully"] {
     background-color: #00173d;
     color: white; }
